# tap-sigma

./: .gitignore  README.md  SETUP_SNOWFLAKE.md  config.sample.json  meltano.yml  pyproject.toml  setup.py  setup.sh  tap_sigma_computing.py
.github/workflows/: test.yml
commands/: meltano.yml
config/: LICENSE  README.md  requirements.txt
configuration/: config.example.json
license/: Makefile
tap_sigma/: __init__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
