[tool.poetry]
name = "tap-sigma"
version = "0.1.0"
description = "Singer tap for Sigma Computing API, built with the Meltano Singer SDK"
authors = ["Your Name <your.email@example.com>"]
keywords = ["ELT", "Sigma Computing", "Sigma", "Singer", "Meltano"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/tap-sigma"
repository = "https://github.com/yourusername/tap-sigma"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
singer-sdk = "^0.36.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = {version = "^0.36.0", extras = ["testing"]}

[tool.poetry.scripts]
tap-sigma = "tap_sigma.tap:TapSigma.cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
